# filter-pack

./: CMakeLists.txt  corner-pin-filter.cpp  corner-pin-widget.cpp  corner-pin-widget.hpp  filter-pack.cpp  lens-distortion-filter.cpp  stroke-filter.cpp
data/: corner_pin_filter.effect  lens_distortion_filter.effect  stroke_filter.effect
